# blocky-synth

./: .gitignore  makefile
src/: CMakeLists.txt  main.cpp  meson.build
src/UI/: embedded_nuklear_test.cpp  jni_ui_test.cpp
src/UI/java/: build.gradle
src/UI/java/com/example/: Hello.java
src/UI/java/core/src/com/blockysynth/ui/: MainUI.java
src/UI/java/desktop/: build.gradle
src/UI/java/desktop/src/com/blockysynth/ui/desktop/: DesktopLauncher.java
src/UI/nuklear/: nuklear.h
src/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  demo  main  nuktest  tutorial
src/builddir/meson-logs/: meson-log.txt
src/oldcrap/: CMakeLists.txt
